# shiroi-protos

./: Cargo.toml  build.rs
protos/: block_engine.proto  custom_searcher.proto  searcher.proto
src/: convert.rs  lib.rs
