[package]
description = "Jito relayer protobuf code"
edition = "2021"
name = "jito-protos"
version = "0.1.0"

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }
