[package]
description = "Jito relayer protobuf code"
edition = "2021"
name = "jito-protos"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
digest = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sha2 = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost"]
