[package]
description = "Jito relayer protobuf code"
edition = "2021"
name = "shiroi-protos"
version = "0.1.0"

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
digest = "0.10.7"
itertools = "0.13.0"
prost = "0.12.3"
prost-types = "0.12.3"
sha2 = "0.10.8"
solana-perf = "=1.18.23"
solana-sdk = "=1.18.23"
tonic = { version = "0.10.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }

[build-dependencies]
protobuf-src = "1.1.0"
tonic-build = "0.10.2"

[package.metadata.cargo-machete]
ignored = ["prost"]
